# ai-aint-interested-cooking-monitor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  task_ranking.txt
configs/: safety_rules.yaml  zones.yaml
configs/recipes/: pasta_and_sauce.yaml
data/: generate_images.py  generate_synthetic.py
data/synthetic/: cuisine_scenarios.yaml  gemini_grid_prompts.txt  image_prompts.yaml  matrix_prompts.txt  scenario_matrix.yaml
docs/: 60s-presentation-script.md  agentic-workflow-overview.md  demo-presenter-script.txt  demo-slide-script.md  hackathon-submission-draft.txt  hackathon_handout.txt  idea.txt  vlm_finetune_experiment.md
docs/plans/: 2026-02-28-agentic-workflow-design.md  2026-02-28-agentic-workflow-implementation.md  2026-02-28-elevenlabs-voice-module-design.md  2026-02-28-multi-task-pipeline-plan.md  2026-02-28-phone-ui-and-demo-design.md  2026-02-28-repo-init-design.md
infra/: README.md  requirements.txt
infra/deployment/: export_model.py
infra/fine_tuning/: train.py
infra/gcp/: setup.sh
infra/pipeline/: merge_existing_lora.py  run_pipeline.py  task_configs.py  utils.py
infra/scripts/: crop_grid.py  generate_matrix.py  generate_on_instance.py  generate_variations.py  vlm_finetune.py  vlm_test.py
results/: task2_baseline.json  task2_final.json  task6_baseline.json  task6_final.json
scripts/: assemble_demo_images.py  assemble_mapo_tofu_demo.py  generate_audio.py  record_backup.py  run_demo.py  test_local_inference.py
src/agent/: agent_loop.py  model_loader.py  recipe_loader.py  safety_engine.py  schemas.py  tools.py  (+2 more)
(+24 files in other folders)
